# ML_ENDSEM_PROJECT

./: README.md  main.py  pyproject.toml  train.ipynb  vercel.json
data/: mymoviedb.xlsx
final_chroma_db/cfef269c-e36d-4add-a900-9f0137f147cc/: index_metadata.pickle
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MovieCard.tsx  Navbar.tsx
frontend/context/: ListContext.tsx
frontend/lib/: api.ts
frontend/types/: moive.ts
models/: h_cluster_movie_model.joblib  kmeans_movie_model.joblib
